update weather-current response
